# intset

./: .ghci  .gitignore  .mailmap  .travis.yml  ChangeLog  README.md  changelog  intset.cabal
bench/: Main.hs
src/Data/: IntervalSet.hs
src/Data/IntSet/: Buddy.hs
src/Data/IntSet/Buddy/: ByteString.hs  Internal.hs
src/Data/IntervalSet/: ByteString.hs  Internal.hs
tests/: Fusion.hs  Main.hs
