name:                  intset
version:               0.1.0.0
category:              Data
license:               BSD3
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
homepage:              https://github.com/pxqr/intset
bug-reports:           https://github.com/pxqr/intset/issues
build-type:            Simple
cabal-version:         >=1.8
synopsis:              Pure, fast and memory efficient integer sets.
description:

   This library provides persistent, time and space efficient integer
   sets implemented as dense big-endian patricia trees with buddy
   suffixes compaction.

   This implementation performs espessially well then set contains
   long integer invervals like [0..2047] that just merged into one
   interval description. This allow to perform many operations in
   constant time and space. However if set contain sparse integers
   like [1,12,7908,234,897] the same operations will take O(W, n)
   which is good enough in most cases.

   TODO That is patricia tree?
   TODO That does mean dense?
   TODO How compaction is performed?

   TODO When this data is good choice?
   TODO When not?
   TODO How this implementation relate to containers version?

-- TODO fix dependencies

source-repository head
  type:                git
  location:            https://github.com/pxqr/intset.git



library
  exposed-modules:     Data.IntSet.Buddy
                     , Data.IntSet.Buddy.ByteString
  other-modules:       Data.IntSet.Buddy.Internal
  build-depends:       base == 4.*
                     , bytestring
  hs-source-dirs:      src
  ghc-options:         -Wall -DTESTING


test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       base == 4.*

                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck

                     , intset

  ghc-options:         -Wall



benchmark benchmarks
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      bench
  build-depends:       base == 4.*
                     , bytestring
                     , containers >= 0.5.2
                     , criterion
                     , deepseq
                     , intset

  ghc-options:         -O3 -Wall -fllvm -fno-warn-orphans
